--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <main>
+    <main class="main">
         <article>
-            <img src="">
+ <img class="picture" src="me.jpg" alt="Gosia's picture">
             <header>
                 <h1>Małgorzata Kuźmierz</h1>
                 <p>Frontend Developer in Training</p>
