--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <main class="main">
         <article>
  <img class="picture" src="me.jpg" alt="Gosia's picture">
-            <header>
-                <h1>Małgorzata Kuźmierz</h1>
-                <p>Frontend Developer in Training</p>
+            <header class="person__info">
+                <h1 class="person__name">Małgorzata Kuźmierz</h1>
+                <p class="person__position">Frontend Developer in Training</p>
             </header>
-            <p>After being stay at home mum for some time, I tried learning some new things and realised that coding is something I enjoy best. I am doing as much as I can with the limited time I have and I would love to develop my skills in a working environment with a mentor. </p>
-            <p>My interests are video games and psychology. I have two hyper active sons, a hilarious cat and a very spoilt dog.</p>
-            <p><a href="https://github.com/mkuzmierz">Check out my Github page!</a></p>
+            <p class="person__description">After being stay at home mum for some time, I tried learning some new things and realised that coding is something I enjoy best. I am doing as much as I can with the limited time I have and I would love to develop my skills in a working environment with a mentor. </p>
+            <p class="person__description">My interests are video games and psychology. I have two hyper active sons, a hilarious cat and a very spoilt dog.</p>
+            <p class="person__description"><a href="https://github.com/mkuzmierz">Check out my Github page!</a></p>
         </article>
     </main>
 
