person content styled

--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business Card</title>
     <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
+  </head>
+  <body>
     <main class="main">
-        <article>
- <img class="picture" src="me.jpg" alt="Gosia's picture">
-            <header class="person__info">
-                <h1 class="person__name">Małgorzata Kuźmierz</h1>
-                <p class="person__position">Frontend Developer in Training</p>
-            </header>
-            <p class="person__description">After being stay at home mum for some time, I tried learning some new things and realised that coding is something I enjoy best. I am doing as much as I can with the limited time I have and I would love to develop my skills in a working environment with a mentor. </p>
-            <p class="person__description">My interests are video games and psychology. I have two hyper active sons, a hilarious cat and a very spoilt dog.</p>
-            <p class="person__description"><a href="https://github.com/mkuzmierz">Check out my Github page!</a></p>
-        </article>
+      <article>
+        <img class="picture" src="me.jpg" alt="Gosia's picture" />
+        <header class="person__info">
+          <h1 class="person__name">Małgorzata Kuźmierz</h1>
+          <p class="person__position">Frontend Developer in Training</p>
+        </header>
+        <p class="person__description">
+          After being stay at home mum for a few years, I tried learning some new
+          things and realised that <strong class="special">coding is something I enjoy best</strong>. I am doing
+          as much as I can with the limited time I have and I would love to
+          develop my skills in a working environment with a mentor.
+        </p>
+        <p class="person__description--with-margin">
+          My interests are <strong class="special">video games and psychology</strong>. I have two hyper active
+          sons, a hilarious cat and a very spoilt dog.
+        </p>
+        <p class="person__description">
+          <a href="https://github.com/mkuzmierz" class="person__link">Check out my Github page!</a>
+        </p>
+      </article>
     </main>
-
-</body>
+  </body>
 </html>
