--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <main class="main">
-      <article>
+      <article class="person">
         <img class="picture" src="me.jpg" alt="Gosia's picture" />
+        <div>
         <header class="person__info">
           <h1 class="person__name">Małgorzata Kuźmierz</h1>
           <p class="person__position">Frontend Developer in Training</p>
@@ -29,6 +30,7 @@
         <p class="person__description">
           <a href="https://github.com/mkuzmierz" class="person__link">Check out my Github page!</a>
         </p>
+    </div>
       </article>
     </main>
   </body>
