Line height adjusted

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           as much as I can with the limited time I have and I would love to
           develop my skills in a working environment with a mentor.
         </p>
-        <p class="person__description--with-margin">
+        <p class="person__description person__description--with-margin">
           My interests are <strong class="special">video games and psychology</strong>. I have two hyper active
           sons, a hilarious cat and a very spoilt dog.
         </p>
