added contact info

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
           as much as I can with the limited time I have and I would love to
           develop my skills in a working environment with a mentor.
         </p>
-        <p class="person__description person__description--with-margin">
+        <p class="person__description">
           My interests are <strong class="special">video games and psychology</strong>. I have two hyper active
           sons, a hilarious cat and a very spoilt dog.
         </p>
+        <p class="person__description person__description--with-margin-and-border">Contact: +48 784 779 597, m.kuzmierz@gmail.com</p>
         <p class="person__description">
           <a href="https://github.com/mkuzmierz" class="person__link">Check out my Github page!</a>
         </p>
