added some JS fun

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   </head>
   <body>
     <main class="main">
-      <article class="person">
+      <article class="person person--js">
         <img class="picture" src="me.jpg" alt="Gosia's picture" />
         <div>
         <header class="person__info">
-          <h1 class="person__name">Małgorzata Kuźmierz</h1>
+          <h1 class="person__name person__name--js">Małgorzata Julia Kuźmierz</h1>
           <p class="person__position">Frontend Developer in Training</p>
         </header>
         <p class="person__description">
@@ -23,9 +23,9 @@
           as much as I can with the limited time I have and I would love to
           develop my skills in a working environment with a mentor.
         </p>
-        <p class="person__description">
+        <p class="person__description person__description--js">
           My interests are <strong class="special">video games and psychology</strong>. I have two hyper active
-          sons, a hilarious cat and a very spoilt dog.
+          sons, a hilarious cat and a very spoilt dog. &#128021 &#128008 &#128102
         </p>
         <p class="person__description person__description--with-margin-and-border">Contact: +48 784 779 597, m.kuzmierz@gmail.com</p>
         <p class="person__description">
@@ -34,5 +34,6 @@
     </div>
       </article>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
